docs: add docs to list & show & update
